Refactor and Adjustments